fix: white space

--- a/src/app/team-event-validation/match-validation/step-match-formations/step-match-formations.component.scss
+++ b/src/app/team-event-validation/match-validation/step-match-formations/step-match-formations.component.scss
@@ -21,6 +21,7 @@
         .content {
             display: grid;
 			grid-template-columns: 50% auto 1fr;
+			grid-template-rows: 528px;
             row-gap: 10px;
             column-gap: 10px;
 
